add --enable-preview to compiler args